# chronos-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml  release.yml
src/: main.rs
src/app/: mod.rs  stopwatch.rs
src/ui/: consts.rs  mod.rs  options.rs  styles.rs
